--- a/personal-portafolio/package.json
+++ b/personal-portafolio/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.3.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "nodemailer": "^6.9.3",
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "react-multi-carousel": "^2.8.4"
   },
   "devDependencies": {
+    "@rollup/plugin-replace": "^5.0.2",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
