--- a/personal-portafolio/package.json
+++ b/personal-portafolio/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
@@ -20,7 +21,8 @@
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-mailchimp-subscribe": "^2.1.3",
-    "react-multi-carousel": "^2.8.4"
+    "react-multi-carousel": "^2.8.4",
+    "react-on-screen": "^2.1.1"
   },
   "devDependencies": {
     "@rollup/plugin-replace": "^5.0.2",
